TestCases/Errors/variabledeclarations.cd
Int main()
{

    '''i = 10
    Print(%I)'''

    //b = 10

    //a = 0;

    //Int a = 10;
    Int a = 5;

    //Int b = 0

    Int c[3] = {1,2,3,4,5};


}